dataset1235/2025-2/610742602/users/1691202220/executions/677928262_3691284457.log
== RUN (2025-08-28 17:23:43)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(inpu())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:26:46)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:27:17)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:23:04)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(inpu())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:25:15)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(inpu())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:24:47)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(inpu())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:24:34)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(inpu())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:25:29)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(inpu())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:25:02)
-- CODE: 
# Entrada das quatro notas 
n1 = float(input())
n2 = float(inpu())
n3 = float(input())
n4 = float(input())

# Média ponderada
media = (n1*1 + n2*2 + n3*3 + n4*4) / 10

# Saída com 2 casas decimais 
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n2 = float(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
